--- a/blizzard-haskell-api.cabal
+++ b/blizzard-haskell-api.cabal
@@ -1,13 +1,10 @@
 name:                blizzard-haskell-api
 version:             0.1.0.0
--- synopsis:
--- description:
-homepage:            https://github.com/githubuser/BlizzardApi#readme
+homepage:            https://github.com/JoeMShanahan/blizzard-haskell-api#readme
 license:             BSD3
-license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
+license-file:        LICENSE.md
+author:              Joe Shanahan
+copyright:           2017 Joe Shanahan
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
@@ -16,6 +13,8 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                     , Types.General
+                     , Types.Options
   build-depends:       base >= 4.7 && < 5
                      , classy-prelude
                      , wreq
@@ -35,9 +34,11 @@ test-suite blizzard-haskell-api-unit
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
+  other-modules:       Options
   build-depends:       base
                      , blizzard-haskell-api
                      , classy-prelude
+                     , hspec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
