--- a/blizzard-haskell-api.cabal
+++ b/blizzard-haskell-api.cabal
@@ -15,6 +15,7 @@ library
   exposed-modules:     Lib
                      , Types.General
                      , Types.Options
+                     , Types.APIBase
   build-depends:       base >= 4.7 && < 5
                      , classy-prelude
                      , wreq
@@ -23,6 +24,7 @@ library
 executable blizzard-haskell-api
   hs-source-dirs:      app
   main-is:             Main.hs
+  other-modules:       Options
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , blizzard-haskell-api
@@ -34,7 +36,6 @@ test-suite blizzard-haskell-api-unit
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  other-modules:       Options
   build-depends:       base
                      , blizzard-haskell-api
                      , classy-prelude
